@@ -1,3 +1,9 @@
+2011-03-15 Borut Razem <borut.razem AT gmail.com>
+
+	* debugger/mcs51/configure.in, debugger/mcs51/configure:
+	  added C99_FLAG to CFLAGS and MAKEDEP for SunPro C compiler
+	* debugger/mcs51/simi.c: include <sys/filio.h> in Solaris
+
 2011-03-14 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCglue.c (pointerTypeToGPByte),
@@ -20,7 +26,7 @@
 2011-03-06 Borut Razem <borut.razem AT gmail.com>
 
 	* sim/ucsim/cmd.src/Makefile.in:
-      fixed for bison, byacc and flex version 2.5.4
+	  fixed for bison, byacc and flex version 2.5.4
 
 2011-03-05 Borut Razem <borut.razem AT gmail.com>
 
